--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ version = "0.1.0"
 
 [dependencies]
 typenum = "1.9.0"
+generic-array = "0.11.0"
 mat-macros = { path = "macros", version = "0.1.0" }
 
 [workspace]
